<?xml version="1.0" encoding="utf-8"?>
<resources>
	
    <string-array name="drawer_values">
        <item>Home</item>
        <item>Stundenplan</item>
        <item>Neuigkeiten</item>
        <item>Veranstaltungen</item>
        <item>Lageplan</item>
        <item>Busfahrplan</item>
        <item>Mensaplan</item>
        <item>Hochschulsport</item>
        <item>Öffnungszeiten</item>
        <item>Ansprechpartner</item>
        <item>FAQs</item>
    </string-array>
    <string-array name="day_values">
        <item>Montag</item>
        <item>Dienstag</item>
        <item>Mittwoch</item>
        <item>Donnerstag</item>
        <item>Freitag</item>
    </string-array>
    
    <string name="mon">Mo</string>
    <string name="tue">Di</string>
    <string name="wed">Mi</string>
    <string name="thu">Do</string>
    <string name="fri">Fr</string>
    
    <string-array name="time_values">
        <item>08:00 &#8211; 10:00</item>
        <item>10:00 &#8211; 12:00</item>
        <item>12:00 &#8211; 14:00</item>
        <item>14:00 &#8211; 16:00</item>
        <item>16:00 &#8211; 18:00</item>
        <item>18:00 &#8211; 20:00</item>
    </string-array>
    
    <string name="time0810">08:00 bis\n10:00</string>
    <string name="time1012">10:00 bis\n12:00</string>
    <string name="time1214">12:00 bis\n14:00</string>
    <string name="time1416">14:00 bis\n16:00</string>
    <string name="time1618">16:00 bis\n18:00</string>
    <string name="time1820">18:00 bis\n20:00</string>
    
    <string name="time08">08:00</string>
    <string name="time10">10:00</string>
    <string name="time12">12:00</string>
    <string name="time14">14:00</string>
    <string name="time16">16:00</string>
    <string name="time18">18:00</string>

    <string name="app_name">Uni4You</string>
    <string name="edit">Bearbeiten</string>
    <string name="title_activity_news">Uni4You - Neuigkeiten</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world_cafeteria">Hello world_cafeteria!</string>
    <string name="title_news">Uni4You | Neuigkeiten</string>
    <string name="title_timetable">Uni4You | Stundenplan</string>
    <string name="title_cafeteria">Uni4You | Mensaplan</string>
    <string name="title_contacts">Uni4You | Ansprechpartner</string>
    <string name="title_faqs">Uni4You | FAQs</string>
    <string name="title_sports">Uni4You | Hochschulsport</string>
    <string name="title_home">Uni4You</string>
    <string name="title_businesshours">Uni4You | Öffnungszeiten</string>
    <string name="title_buslines">Uni4You | Busfahrplan ab ZOB</string>
    <string name="title_map">Uni4You | Lageplan</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="action_websearch">Action Websearch</string>
    <string name="title_activity_display_day">Uni4You | Stundenplan</string>
    <string name="title_activity_display_day_fragment">Uni4You | Stundenplan</string>
    <string name="create_event_TT_dialog">Zu dieser Zeit ist keine Veranstaltung vorhanden! </string>
    <string name="cancel">Abbrechen</string>
    <string name="create">Jetzt Anlegen</string>
    <string name="title_activity_edit_time_table">Bearbeiten</string>
    <string name="eventTTh">Veranstaltungstitel</string>
    <string name="locationTTh">Ort</string>
    <string name="timeh">Zeit</string>
    <string name="title_activity_display_chair_contacts">DisplayChairContactsActivity</string>
    <string name="create_event_no_location_dialog">Es ist kein Ort für die Veranstaltung angegeben.</string>
    <string name="create2">Trotzdem anlegen</string>
    <string name="title_activity_display_time_table_entry">Uni4You | Stundenplan</string>
    <string name="descriptionTTh">Beschreibung</string>
    <string name="color">Farbe</string>
    <string name="title_activity_sports_category_fragment">Uni4You | Hochschulsport</string>
    <string name="title_activity_display_sports_course">DisplaySportsCourseActivity</string>
    <string name="title_activity_display_sport_courses">Uni4You | Hochschulsport</string>
    <string name="title_activity_home_fragment">HomeFragment</string>
    <string name="app_label">AppLabel</string>
    <string name="search_hint">Sportkurs</string>
    <string name="menu_search">Suche</string>
    <string name="menu_email">Mail an Fachschaft</string>
    <string name="title_activity_search_sports">Uni4You | Hochschulsport</string>
    <string name="title_activity_search_contacts">Uni4You | Ansprechpartner</string>
    <string name="title_activity_business_hours_fragment">Öffnungszeiten</string>
    <string name="title_activity_display_business_hours">Öffnungszeiten</string>
    <string name="title_activity_display_contact_person">Ansprechpartner</string>
    <string name="title_activity_display_news">Uni4You | Neuigkeiten</string>
    <string name="title_activity_display_faq">DisplayFAQActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="student">Student</string>
    <string name="employee">Mitarbeiter</string>
    <string name="external">Gast</string>
    <string name="title_events">Uni4You | Veranstaltungen</string>
    <string name="title_activity_search_events">Uni4You | Veranstaltungen</string>
    <string name="searchResults">Suchergebnisse</string>
    <string name="noSearchResults">Keine Ergebnisse zu diesem Begriff gefunden.</string>
    <string name="action">Perform action</string>
    <string name="undobar_sample_message">Löschen erfolgreich.</string>
    <string name="undo">Rückgängig</string>
    <string name="ContactPerson">Person</string>
    <string name="ContactGroup">Lehrstuhl</string>
    <string name="SportsCourse">Sportkurs der Kategorie</string>
    <string name="SportsCourseCategory">Kategorie</string>
    <string name="semesterbreak">Vorlesungsfreie Zeit</string>
    <string name="semester">Vorlesungszeit</string>
    <string name="news">Neuigkeiten</string>
    <string name="buslines">Busfahrplan</string>
    <string name="menuTodayMain">Mensaplan heute | Hauptspeisen</string>

</resources>