<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#eeeeee"
        android:orientation="vertical"
        android:padding="8dp" >

        <TextView
            android:id="@+id/timeTT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/back"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:id="@+id/veranstaltungh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eventTTh"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#333333"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/veranstaltungd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/back"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:id="@+id/locationh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/locationTTh"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#333333"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/locationd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/back"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:id="@+id/descriptionh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descriptionTTh"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#333333"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/descriptiond"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back"
            android:orientation="vertical"
            android:padding="10dp" >

            <Button
                android:id="@+id/colorButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/color" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>