<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp" >

        <TextView
            android:id="@+id/timeTTdisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/back"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:id="@+id/veranstaltunghdisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eventTTh"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#333333"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/veranstaltungddisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#333333" >
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/back"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:id="@+id/locationhdisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/locationTTh"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#333333"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/locationddisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#333333" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/back"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:id="@+id/descriptionhdisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descriptionTTh"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#333333"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/descriptionddisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#333333" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>